--- a/links/index.html
+++ b/links/index.html
@@ -17,7 +17,7 @@
 
 	<script>
 		window.onload = function (){ 
-			window.location.href = 'https://k-nursagatov.itsinsta.site/links.html';
+			window.location.href = 'https://k-nursagatov.itsinsta.site/links.html' + window.location.search;
 		}
 	</script>
 </body>
