--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=TzYRstfDYkwAX-u0Bto&oh=07706b12c0888670374097dc6435c050&oe=5EBDCC96" alt="Қайрат Нұрсағатов">
+							<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=ZVK439ZveUYAX8DzusD&oh=8dfc70eb891d4642bcc4547ea25ee1e6&oe=5EBDCC96" alt="Қайрат Нұрсағатов">
 						</div>
 					</div>
 					<div class="main-sec__txt">
@@ -93,6 +93,26 @@
 				</div>
 			</div>
 		</div>
+		<div class="stories">
+			<div class="container">
+				<div class="stories__slider-wrap">
+					<div class="stories__slider" id="js-stories-slider">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<div class="stories__slide" title="Последнее">
+									<a href="index.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/Poslednee.png);"></div>
+										<div class="stories__slide-txt">Последнее</div>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="stories__arrow stories__arrow--prev" id="js-stories-prev"></div>
+					<div class="stories__arrow stories__arrow--next" id="js-stories-next"></div>
+				</div>
+			</div>
+		</div>
 		<div class="items" id="js-items">
 			<div class="container">
 				<div class="items-bar">
@@ -103,7 +123,7 @@
 					<div class="items-item">
 						<a href="./posts/./B6z25WRnleb.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=7NzE9-gf_QkAX_V9WBk&oh=313e2db8400a286648bc9c4ac666dde4&oe=5ED97925" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=p2Nf6qStgh4AX8Puow9&oh=6d2e574ac8fc6c286102b13bfbb56e90&oe=5ED97925" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -125,7 +145,7 @@
 					<div class="items-item">
 						<a href="./posts/./B6v_6N6nWD5.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=j7JWhrdD7qsAX8NXtzu&oh=47c4c458ed692d94cf1327705d91bf97&oe=5EC07881" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/79272644_998668020495069_3030074000769271502_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=wX1pkTEXfOwAX8wGTiJ&oh=da615bade5a002340e6b4a81af4434a1&oe=5EC07881" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -147,7 +167,7 @@
 					<div class="items-item">
 						<a href="./posts/./rvshi-2oy-vzvod.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=1J1s_TehHhkAX_G69R5&oh=e9dc92492465c353551806626cf3421a&oe=5ECA249C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=kgQsVWJLu4kAX87dZ5T&oh=79178498cb73153f0c61d642399d3ec9&oe=5ECA249C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -169,7 +189,7 @@
 					<div class="items-item">
 						<a href="./posts/./B6XQlnGnymN.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=2_ykM4PcuacAX_Lr2T-&oh=4c380d94d857c17eb2702879fa6738e6&oe=5ED0BD57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=_5IvvGACEzQAX-ttvpN&oh=aa17daa0d53d1e821b30b3774a929c83&oe=5ED0BD57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -191,7 +211,7 @@
 					<div class="items-item">
 						<a href="./posts/./B6VfhQuHFVw.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=iGPs_hwJckAAX-PobAg&oh=8bb9042819e20ae53da22f2701c8695a&oe=5EBCF048" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=8JislvHQxwoAX_zHiaI&oh=cc638cb06fc4e8df542492bb2076dcac&oe=5EBCF048" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -213,7 +233,7 @@
 					<div class="items-item">
 						<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=pJcK-8oXn5cAX_aHCwL&oh=b7eb18640f383571da8bd0db288b5ba3&oe=5ED1144B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин женской одежды">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=Sm6yr1z-A_0AX9iw_1l&oh=9e621e1725e72ee24319dda665f37e1f&oe=5ED1144B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Магазин женской одежды">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -235,7 +255,7 @@
 					<div class="items-item">
 						<a href="./posts/./kukhni.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=1UUhtNq2gmoAX_b-0gm&oh=1cfd3e97b79bbb5c208ef7dc5dd5b72f&oe=5EBFF3B5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Кухни">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=KSTi2HQ5zgQAX-opNbi&oh=a90bca337f0a9e74c37d10fd5875544d&oe=5EBFF3B5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Кухни">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -257,7 +277,7 @@
 					<div class="items-item">
 						<a href="./posts/./garderobnye-komnaty-so-shkafami.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=ruwUGAOtbBgAX80B8Aa&oh=6456a3d1b8c18bfb0961364980e72854&oe=5E3CA950" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=YS2h9JvoeVYAX8bQgvs&oh=22b8fd3ea0ea08d114184a716acaf6ea&oe=5E409DD0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -279,7 +299,7 @@
 					<div class="items-item">
 						<a href="./posts/./shakhmatshylar.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=JhrGrD-TKGIAX-p6y6t&oh=d8cf490df8f052ab02d6d6feaf21ec9b&oe=5EB9C879" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=BtOme520QhEAX_HxdKD&oh=1bab479ec151def781eb0a79af7ec800&oe=5EB9C879" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -301,7 +321,7 @@
 					<div class="items-item">
 						<a href="./posts/./B2WrgpxFX-O.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=Sixz0_LhS3sAX8USiZY&oh=16dea052835434b5c7cfc30041bef0db&oe=5EC4BE21" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=0eHYfZE1OBcAX-Gwh8Y&oh=7a666851bf1396a7592582d008e64b50&oe=5EC4BE21" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -323,7 +343,7 @@
 					<div class="items-item">
 						<a href="./posts/./Bz0MMcSFq5r.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Jpc2P7Akc7EAX8W8Jxo&oh=0a046f55fc1811c1d02ea9ae61f704fc&oe=5EC4A5A0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=ZOQY57p-b80AX-JM16b&oh=1ddd9aa63fefb344945c690a92167b60&oe=5EC4A5A0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -345,7 +365,7 @@
 					<div class="items-item">
 						<a href="./posts/./Bz0MLyulQuj.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=P2XFglvGmqUAX-7OvsE&oh=5ce3f51803ef2a1b0d5d2445153274f2&oe=5EB7B13F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=sa0AGXKE3LMAX_nOwqX&oh=7057ce59da8e2825145f79787b542db8&oe=5EB7B13F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -367,7 +387,7 @@
 					<div class="items-item">
 						<a href="./posts/./Bz0K9HXl4eW.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65804118_464825114318596_4605417188570190807_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=IAqqXhRNrYIAX-rm1lJ&oh=e8831d70723e9120c67d16912782f887&oe=5ECBC9D8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65804118_464825114318596_4605417188570190807_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=mqunE4kZ63cAX8Xf8gs&oh=b61620c2c5ded3dc4f3f0ec5e123e808&oe=5ECBC9D8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -389,7 +409,7 @@
 					<div class="items-item">
 						<a href="./posts/./Bz0KebXFVXP.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/66674745_156489712186054_8619277253094696931_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=aNPDzuR37YEAX_plw6X&oh=f0e6806c82f8912782a29972e32cc57a&oe=5ED7196C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/66674745_156489712186054_8619277253094696931_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=qSdJa3JGTvMAX8vK2Yq&oh=efbd2c518adfa6d2c3f49bd1a11cd4d1&oe=5ED7196C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -411,7 +431,7 @@
 					<div class="items-item">
 						<a href="./posts/./BzaqwMpl5IA.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65670277_442289273290077_1676988089729350296_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=stya9Re8kjsAX8Pj7cO&oh=8461793c19fa9c018dc236681d06a341&oe=5EDB8F7D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65670277_442289273290077_1676988089729350296_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=1qaCGaOcG8oAX9Fa2U5&oh=a32e8d856c0e9e3660af1580ff08ed88&oe=5EDB8F7D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -433,7 +453,7 @@
 					<div class="items-item">
 						<a href="./posts/./ByIWX0iFP-x.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60918464_2339806362956296_2510710648770381561_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=ASOBK-15KFMAX8quQXM&oh=acdd5002ef3017712082f216dbf0a95a&oe=5EB8741C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60918464_2339806362956296_2510710648770381561_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=KsfB7Fdvr9kAX-lvRwC&oh=a71110922bbe1273759f95e00695dfe3&oe=5EB8741C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -455,7 +475,7 @@
 					<div class="items-item">
 						<a href="./posts/./ByIVazYFbK5.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60991654_611442149360858_1673236753925595956_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Uirh0W2Ybr4AX96YBhu&oh=db4162e23aff76f19676ffca011bb7e1&oe=5EC4CB94" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60991654_611442149360858_1673236753925595956_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=By-cB5EYB7wAX9WI8Cz&oh=2fab66d796f10107fb2c01c90dce36df&oe=5EC4CB94" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -477,7 +497,7 @@
 					<div class="items-item">
 						<a href="./posts/./ByAnvdQlEh3.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60239152_2385342965030497_8799094838762037798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=In-p_Q4nXJMAX-7z9Uq&oh=d0d7f5976a6c198f1690b3c4d93b4f9d&oe=5ECD1F2F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60239152_2385342965030497_8799094838762037798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=lodzk6HHCCMAX98gWV9&oh=647b30e439103d6d2c44bde59f819409&oe=5ECD1F2F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
