--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 
 	<script>
 		window.onload = function (){ 
-			window.location.href = 'https://k-nursagatov.itsinsta.site/error.html';
+			window.location.href = 'https://k-nursagatov.itsinsta.site/error.html' + window.location.search;
 		}
 	</script>
 </body>
