--- a/stories.html
+++ b/stories.html
@@ -103,9 +103,39 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="B8YWKAlnPrv" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=xnI2mKjz4lYAX8gRHW_&oh=dbee51e3054c3cf73bcc192ba8f72131&oe=5F0373B2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="B8YWHkIHYUc" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=6nSaaStdLtQAX9-Gwe4&oh=8d8ecaf9685729bbcc56b363b0483752&oe=5EFFCE8A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="B8YVEuQnoXW" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=3reADE7gTTEAX-kI6OG&oh=19e2525488e5998eccd79652d00bc6b9&oe=5EE017DE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="B6z25WRnleb" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=p2Nf6qStgh4AX8Puow9&oh=785fc76fffbba3d73de21ef35e9c485c&oe=5F010625" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81476796_808786939548169_7354265906439607728_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=UdNCh1R-GVMAX-Jqric&oh=2703936d78d74090fb6a380e9d7f2553&oe=5F010625" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -125,7 +155,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rvshi-2oy-vzvod" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=kgQsVWJLu4kAX87dZ5T&oh=79178498cb73153f0c61d642399d3ec9&oe=5ECA249C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=Lk07z3CCKJ4AX8nA-Gb&oh=ecb14dd185c1138923342e4515ea16dd&oe=5ECA249C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РВШИ 2ой взвод">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -135,7 +165,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B6XQlnGnymN" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=_5IvvGACEzQAX-ttvpN&oh=aa17daa0d53d1e821b30b3774a929c83&oe=5ED0BD57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=XjPUVXWr2FAAX-c-4ND&oh=2e08637dd9de01ced28a6485f936d19e&oe=5ED0BD57" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -175,7 +205,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="garderobnye-komnaty-so-shkafami" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=YS2h9JvoeVYAX8bQgvs&oh=b774233bfd2b067edddf01242e818d3f&oe=5E4340D0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74381408_165947047810485_3590122455548662399_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=2qfaq318Q7sAX8bUQEM&oh=4929e6e512fb5656dba3c66850535577&oe=5E449250" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гардеробные комнаты со шкафами">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -185,7 +215,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="shakhmatshylar" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=BtOme520QhEAX_HxdKD&oh=1bab479ec151def781eb0a79af7ec800&oe=5EB9C879" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=u-1KC-qJEugAX-4Ttam&oh=edef27fe32e41ef0764f2311baaa4343&oe=5EB9C879" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Шахматшылар">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -195,7 +225,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="B2WrgpxFX-O" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=0eHYfZE1OBcAX-Gwh8Y&oh=7a666851bf1396a7592582d008e64b50&oe=5EC4BE21" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/68974073_126303875399477_7030915911835423186_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=GHqejnyIl8YAX-TBmrc&oh=762eeffca576a62c530cc2d3e2bb9936&oe=5EC4BE21" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -205,7 +235,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="Bz0MMcSFq5r" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=ZOQY57p-b80AX-JM16b&oh=1ddd9aa63fefb344945c690a92167b60&oe=5EC4A5A0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65304046_507356223335164_6550506039712369174_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=S2y4kelOnecAX8jt2D7&oh=4359b30e49ad7dcdf09e0d1133c72e50&oe=5EC4A5A0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -215,7 +245,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="Bz0MLyulQuj" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=D4WzPw5b8MsAX8ryCEw&oh=639726c591068e88d8ac619381c7aa13&oe=5EB7B13F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65795699_469444273456655_269617935153902342_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=D4WzPw5b8MsAX8ryCEw&oh=89820e18883ca987950d899a399e3b2a&oe=5EDF3E3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -246,36 +276,6 @@
 							<input id="BzaqwMpl5IA" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65670277_442289273290077_1676988089729350296_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=YddOnRWt6-oAX-72fSu&oh=733b95544b92bed7e26ec56339aeead5&oe=5F031C7D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="ByIWX0iFP-x" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60918464_2339806362956296_2510710648770381561_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=IO9IPevOKE0AX9Zx1SA&oh=2d526da533264385f06acfce97b5c7ca&oe=5EB8741C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="ByIVazYFbK5" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60991654_611442149360858_1673236753925595956_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Ywh9iFw3iBIAX9aDnXn&oh=1a687e52652a689fd311d1c4fffdc76c&oe=5EC4CB94" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="ByAnvdQlEh3" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/60239152_2385342965030497_8799094838762037798_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=lhrq6PRydWIAX9b_rEF&oh=ac346feae8a3351a09aa19754cd29eea&oe=5ECD1F2F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
