--- a/links.html
+++ b/links.html
@@ -80,26 +80,6 @@
 "
 >
 
-		<div class="stories">
-			<div class="container">
-				<div class="stories__slider-wrap">
-					<div class="stories__slider" id="js-stories-slider">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<div class="stories__slide" title="Последнее">
-									<a href="index.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/Poslednee.png);"></div>
-										<div class="stories__slide-txt" style="">Последнее</div>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="stories__arrow stories__arrow--prev" id="js-stories-prev"></div>
-					<div class="stories__arrow stories__arrow--next" id="js-stories-next"></div>
-				</div>
-			</div>
-		</div>
 
 			<div class="links-page">
 				<div class="container">
@@ -162,7 +142,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>23</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=u-1KC-qJEugAX-4Ttam&oh=edef27fe32e41ef0764f2311baaa4343&oe=5EB9C879" alt="Шахматшылар">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=u-1KC-qJEugAX-4Ttam&oh=6a45b660b6d882212ef69839d8ad6503&oe=5EE15579" alt="Шахматшылар">
 									</div>
 									<div class="article-more__item-name" style="
 ">Шахматшылар</div>
@@ -170,9 +150,19 @@
 								<a href="./posts/./B8YWHkIHYUc.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>19</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>21</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=6nSaaStdLtQAX9-Gwe4&oh=8d8ecaf9685729bbcc56b363b0483752&oe=5EFFCE8A" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=r18d0wbcUvoAX8XAKxb&oh=8072f7f34b7201be9fc6b826ffff2378&oe=5EFFCE8A" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
+								</a>
+								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=qTr96xFqC5kAX9uhNlM&oh=45f65d5ec419cb916da95d3e11375db3&oe=5EBCF048" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -187,22 +177,12 @@
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
 								</a>
-								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=255Q1nbHj9YAX_t3pLm&oh=432b08ab6a03d2c05afb16e728872691&oe=5EBCF048" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
 								<a href="./posts/./kukhni.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=cwmnGaIjIBAAX_VPaQd&oh=d0b2497a8ebd3c2653861d5c68261376&oe=5EBFF3B5" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=1ePrcS_l9pEAX9h8bKK&oh=6a184c6de7dffb8c2da6fadc8421cbab&oe=5EBFF3B5" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
@@ -227,12 +207,12 @@
 									<div class="article-more__item-name" style="
 ">Магазин женской одежды</div>
 								</a>
-								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
+								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>11</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=xnI2mKjz4lYAX8gRHW_&oh=dbee51e3054c3cf73bcc192ba8f72131&oe=5F0373B2" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=JeLII9EDNssAX8rw1Kg&oh=84a905c06bd8b74a1bd1eabe45a34862&oe=5EE017DE" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
