--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=xSrhbbYyxhgAX9kb1o8&oh=a77be39b700fa2b549415055d6af7a25&oe=5EBDCC96" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=xSrhbbYyxhgAX9kb1o8&oh=7c25ec9cb4d7e927397049e01167fa0d&oe=5EE55996" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -150,9 +150,19 @@
 								<a href="./posts/./B8YWHkIHYUc.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>21</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>22</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=r18d0wbcUvoAX8XAKxb&oh=8072f7f34b7201be9fc6b826ffff2378&oe=5EFFCE8A" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=qVq7NwtLPEwAX8F-ntZ&oh=035ca953dd1ee211a33412e993cd2075&oe=5EFFCE8A" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
+								</a>
+								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=aYL1VHJJTKQAX-ZVtOU&oh=833432af2e0c65f9eecd001f55f61a1c&oe=5EE47D48" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -167,32 +177,22 @@
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
 								</a>
-								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=qTr96xFqC5kAX9uhNlM&oh=45f65d5ec419cb916da95d3e11375db3&oe=5EBCF048" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
 								<a href="./posts/./kukhni.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=1ePrcS_l9pEAX9h8bKK&oh=6a184c6de7dffb8c2da6fadc8421cbab&oe=5EBFF3B5" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=_daQMaKf33AAX8IveQA&oh=59e44dacc52fc7df06a85434c3d98f74&oe=5EBFF3B5" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
 								</a>
-								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
+								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=dNmsMqaqfUoAX-YRBFD&oh=d54de40eca2d4c962d3dc669c49674a4&oe=5ED0BD57" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=TlKJOjH08ZcAX-iMKVX&oh=c7d5eb102b73b4d095cb69c10223a970&oe=5F0373B2" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -207,12 +207,12 @@
 									<div class="article-more__item-name" style="
 ">Магазин женской одежды</div>
 								</a>
-								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
+								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>11</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=JeLII9EDNssAX8rw1Kg&oh=84a905c06bd8b74a1bd1eabe45a34862&oe=5EE017DE" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=dNmsMqaqfUoAX-YRBFD&oh=d54de40eca2d4c962d3dc669c49674a4&oe=5ED0BD57" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
