--- a/error.html
+++ b/error.html
@@ -93,15 +93,6 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./shakhmatshylar.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>23</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69343230_1375122765979971_7904559209205319811_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=HbWujZRUQL8AX_p3WAZ&oh=92b735f92476fac4213ddc07fad53155&oe=5E850C79" alt="Шахматшылар">
-							</div>
-							<div class="article-more__item-name">Шахматшылар</div>
-						</a>
 							<a href="./posts/./B8YWHkIHYUc.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
@@ -116,7 +107,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=zh6feH3qFlIAX9bK7us&oh=960a06bbd6803925d1ce20c4fa092655&oe=5E88399C" alt="РВШИ 2ой взвод">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=QLxQi08pXasAX8wwfqh&oh=4347ac436d770d61679853a23d5a4ee1&oe=5E88399C" alt="РВШИ 2ой взвод">
 							</div>
 							<div class="article-more__item-name">РВШИ 2ой взвод</div>
 						</a>
@@ -143,7 +134,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=eZ33WC5QGm0AX_uK6uk&oh=0f3f0e483ccefb573ce2ef607c6db019&oe=5E8CCCB2" alt="">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=eZ33WC5QGm0AX_uK6uk&oh=448fdd1ef9bfb8b4ed99db9472228172&oe=5E99FBB2" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
@@ -152,7 +143,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=dncPrKRDW_IAX9eLhrT&oh=fc3b5bebdebcfc6a1777aa2cb7f22f2f&oe=5E81A357" alt="">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=R1m9xnzcFKQAX_26AvU&oh=71c098912c67ff01f837a57c3d0d6519&oe=5E81A357" alt="">
 							</div>
 							<div class="article-more__item-name"></div>
 						</a>
@@ -164,6 +155,15 @@
 								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=7kCviHXz_uUAX_s_bOs&oh=4ef3b384e2c2967118e2f1861a5f91f2&oe=5E81FA4B" alt="Магазин женской одежды">
 							</div>
 							<div class="article-more__item-name">Магазин женской одежды</div>
+						</a>
+							<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>11</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=HiMX4qsLgOwAX8WL59o&oh=c14900612a7e9e0125c51374a3bfd7a1&oe=5E83CEDE" alt="">
+							</div>
+							<div class="article-more__item-name"></div>
 						</a>
 						</div>
 				</div>
