--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=K92uW5FncqUAX-bxFZi&oh=59476d2361fb374d5295d1ce9fdd2bd9&oe=5E963F96" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=DQ5hv1mEd3MAX-t7qOJ&oh=c5cbb692e04271a8ef232ee6150af8d0&oe=5E963F96" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -147,16 +147,6 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=teJOEFdevQUAX89WoP3&oh=5486d5987e2a54e189d06b08e0c7568d&oe=5E956348" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
 								<a href="./posts/./rvshi-2oy-vzvod.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
@@ -166,6 +156,16 @@
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
+								</a>
+								<a href="./posts/./B6VfhQuHFVw.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=teJOEFdevQUAX89WoP3&oh=5486d5987e2a54e189d06b08e0c7568d&oe=5E956348" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
 								</a>
 								<a href="./posts/./B9HG5z2HH5t.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -182,10 +182,20 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=jYix-jZa644AX9WosTN&oh=55248a7ad89ff455dab237c572b04364&oe=5E9866B5" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=fzIGwN7xTS0AX-MukI1&oh=da4dcdce131ab457500025215ca180c8&oe=5EA595B5" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
+								</a>
+								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=ZZhahtTgbacAX_tJGOf&oh=882435ddbc4eeca7f06d531a80922dfa&oe=5E9C0157" alt="">
+									</div>
+									<div class="article-more__item-name" style="
+"></div>
 								</a>
 								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -197,25 +207,15 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
+								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=e-55a5fzRGIAX-HYXP5&oh=25ac2a3e65f2564b858cfe90621890e6&oe=5EA72AB2" alt="">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=BGRBMMWlIzgAX_siSyM&oh=49b8fd4e8954e95e5dce1419b5316ba1&oe=5E9C584B" alt="Магазин женской одежды">
 									</div>
 									<div class="article-more__item-name" style="
-"></div>
-								</a>
-								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=ZZhahtTgbacAX_tJGOf&oh=8234c1e707218fd6dbea0405606daa14&oe=5E8ED257" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
+">Магазин женской одежды</div>
 								</a>
 							</div>
 						</div>
